tests/ui/macros/macro-fragment-ident-underscore-error.stderr
error: no rules expected reserved identifier `_`
  --> $DIR/macro-fragment-ident-underscore-error.rs:11:19
   |
LL | macro_rules! identity {
   | --------------------- when calling this macro
...
LL |     let identity!(_) = 10;
   |                   ^ no rules expected this token in macro call
   |
note: while trying to match meta-variable `$i:ident`
  --> $DIR/macro-fragment-ident-underscore-error.rs:5:6
   |
LL |     ($i: ident) => {
   |      ^^^^^^^^^

error: aborting due to 1 previous error

